--- a/src/index.css
+++ b/src/index.css
@@ -53,3 +53,12 @@
         /* Firefox */
     }
 }
+
+::-webkit-scrollbar {
+    width: 2px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #000;
+    border-radius: 5px;
+}
