--- a/src/index.css
+++ b/src/index.css
@@ -148,3 +148,35 @@
 .block-bg:after {
 	filter: blur(50px);
 }
+
+
+@keyframes expand {
+  0% {
+    transform: translateY(-100%);
+    height: 0;
+  }
+  100% {
+    transform: translateY(0);
+    height: 360px;
+  }
+}
+
+.ani{
+  animation: expand 1s ease-out forwards;
+}
+
+@keyframes collapse {
+  0% {
+    transform: translateY(0);
+    height: 100%;
+  }
+  100% {
+    transform: translateY(-100%);
+    height: 0;
+  }
+}
+
+.noani{
+  overflow: hidden;
+  animation: collapse 1s ease-out forwards;
+}
